# slackware-security-notifier

./: .gitignore  Cargo.toml  README.md
.github/workflows/: minimal.yml  trivy.yml
src/: main.rs
src/model/: advisor.rs
src/repository/: db.rs
src/social/: twitter.rs
src/util/: parser.rs
