[package]
name = "slackware-security-notifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.198", features = ["derive"] }
futures = "0.3.30"
reqwest = {version = "0.12.3", features = ["blocking", "multipart"] }
regex = "1.10.4"
watcher = "0.0.1"
chrono = { version = "0.4.38", features = ["unstable-locales"] }
twitter-v2 = "0.1.8"
env_logger = "0.11.3"
log = "0.4.21"


[dependencies.mongodb]
version = "2.8.2"
features = ["bson-chrono-0_4"]


